Fix navigation links active/disabled

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -78,12 +78,15 @@
               </a>
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a data-l10n-id="news" class="nav-link disabled" href="/news/index.html">News</a>
+                  <a data-l10n-id="news" class="nav-link" href="/news/index.html">News</a>
                 </li>
                 <li class="nav-item">
-                  <a data-l10n-id="faq" class="nav-link disabled" href="/faq/index.html">FAQ</a>
+                  <a data-l10n-id="faq" class="nav-link" href="/faq/index.html">FAQ</a>
                 </li>
                 <li class="nav-item">
+                <!--li class="nav-item">
+                  <a data-l10n-id="team" class="nav-link" href="/team/index.html">Team</a>
+                </li-->
                   <a data-l10n-id="hiring" class="jobs_link btn btn-primary btn-lg" role="button" href="#jobs">We're hiring!</a>
                 </li>
               </ul>
