Update news logos

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -194,16 +194,17 @@
 
           <div class="container-fluid" id="social-proof">
               <div class="row centered">
-                <div class="col-sm-12">
+                <div id="news_logos" class="col-sm-12">
                   <!-- Added area to make news logos as hyperlink -->
-                  <img src="../images/news-logos.png" usemap="#news_logs_map">
-                  <map name="news_logs_map">
-                    <area shape="rect" coords="0,0,55,50" href="./news/index.html#techcrunch" alt="Test">
-                    <area shape="rect" coords="110,0,240,50" href="./news/index.html#fossybytes" alt="Test">
-                    <area shape="rect" coords="290,0,410,50" href="./news/index.html#bitcoinmagazine" alt="Test">
-                    <area shape="rect" coords="470,0,550,50" href="./news/index.html#IBTlogo" alt="Test">
-                    <area shape="rect" coords="610,0,750,50" href="./news/index.html#bitcoinexchange" alt="Test">
-                  </map>
+                    <a href="./news/index.html#techcrunch"><img src="../images/newslogos/techcrunch.svg" alt="TechCrunch" /></a>
+                    <a href="./news/index.html#fossybytes"><img src="../images/newslogos/fossybytes.png" alt="Fossbytes" /></a>
+                    <a href="./news/index.html#bitcoinmagazine"><img src="../images/newslogos/bitcoinmagazine.png" alt="Bitcoin Magazine" /></a>
+                    <a href="./news/index.html#IBTlogo"><img src="../images/newslogos/IBTlogo.svg" alt="International Business Times" /></a>
+                    <a href="./news/index.html#bitcoinexchange"><img src="../images/newslogos/bitcoinexchange.png" alt="Bitcoin Exchange Guide" /></a>
+                    <a href="./news/index.html#btcmanager"><img src="../images/newslogos/btcmanager.png" alt="Bitcoin Manager" /></a>
+                    <a href="./news/index.html#california-sunday-magazine"><img src="../images/newslogos/california-sunday-magazine.svg" alt="California Sunday Magazine" /></a>
+                    <a href="./news/index.html#cointelegraph"><img src="../images/newslogos/cointelegraph.png" alt="Coin Telegraph" /></a>
+                    <a href="./news/index.html#futurismlogo"><img src="../images/newslogos/futurismlogo.png" alt="Futurism" /></a>
                 </div>
               </div>
           </div>
