--- a/webroot/index.html
+++ b/webroot/index.html
@@ -147,7 +147,7 @@
                     <ul>
                       <li data-l10n-id="talks-and-papers"><h4>Talks and Papers</h4></li>
 
-                       <li>Bram Cohen giving a
+                       <li data-l10n-id="grinding-attacks">Bram Cohen giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
 
                        <li data-l10n-id="bpase-2018-first">Bram Cohen giving a
@@ -171,10 +171,10 @@
                         <a target="_blank" href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
                         <a target="_blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
 
-                         <li >Bram Cohen giving a
+                         <li data-l10n-id="bitcoin-devs-one">Bram Cohen giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="_blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides </a>and<a target="_blank" href="https://github.com/bramcohen/MerkleSet"> code</a>.</li>
 
-                        <li >Bram Cohen giving a
+                        <li data-l10n-id="bitcoin-devs-two">Bram Cohen giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
                     </ul>
                   </p>
