Updated copy on Ryan Singer's link.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -147,7 +147,7 @@
                     <ul>
                       <li data-l10n-id="talks-and-papers"><h4>Talks and Papers</h4></li>
                       <li >Ryan Singer giving a
-                       <a target="_blank" href="https://www.youtube.com/watch?v=P86QQXcnJ4M&feature=youtu.be">keynote</a> at StartEngine Summit rethinking the ICO.
+                       <a target="_blank" href="https://www.youtube.com/watch?v=P86QQXcnJ4M&feature=youtu.be">keynote</a> at StartEngine rethinking the ICO.
                       </li>
                        <li data-l10n-id="grinding-attacks">Bram Cohen giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
