--- a/webroot/index.html
+++ b/webroot/index.html
@@ -147,8 +147,8 @@
                     <ul>
                       <li data-l10n-id="talks-and-papers"><h4>Talks and Papers</h4></li>
                       <!--Test ryan summit-->
-                      <li data-l10n-id="ryan-summit">Ryan Singer giving a <a target="_blank" href="https://www.youtube.com/watch?v=P86QQXcnJ4M&feature=youtu.be">keynote</a> at StartEngine Summit 2.0 about rethinking the ICO.</li>
-                       <li data-l10n-id="grinding-attacks">Bram Cohen giving a <a target="_blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
+                      <li >Ryan Singer giving a <a target="_blank" href="https://www.youtube.com/watch?v=P86QQXcnJ4M&feature=youtu.be">keynote</a> at StartEngine Summit 2.0 about rethinking the ICO.</li>
+                       <li >Bram Cohen giving a <a target="_blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
                        <li data-l10n-id="bpase-2018-first">Bram Cohen giving a <a target="_blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a target="_blank" href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="_blank">slides</a> by Hamza Abusalah. </li>
                         <!--li data-l10n-id="james-talk">James Prestwich giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
@@ -166,10 +166,10 @@
                         <a target="_blank" href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
                         <a target="_blank" href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
 
-                         <li data-l10n-id="bitcoin-devs-one">Bram Cohen giving a
+                         <li >Bram Cohen giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk</a> at SF Bitcoin Devs Seminar about data structures for scalling Bitcoin with <a target="_blank" href="https://view.publitas.com/chia-network/bitcoin_data_structures/">slides </a>and<a target="_blank" href="https://github.com/bramcohen/MerkleSet"> code</a>.</li>
 
-                        <li data-l10n-id="bitcoin-devs-two">Bram Cohen giving a
+                        <li >Bram Cohen giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=zZaB4hM8SQ4">talk </a>at SF Bitcoin Devs Seminar about removing waste from cryptocurrencies.</li>
                     </ul>
                   </p>
