Add Simplified Chinese translation

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -34,7 +34,7 @@
     <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     
     <meta name="defaultLanguage" content="en-US">
-    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr, pt-BR, tr">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr, pt-BR, tr,zh-CN">
     <link rel="localization" href="/locales/app.{locale}.ftl">
     <script src="/js/l20n.min.js"></script>
     <script defer="" src="/js/bootstrap.min.js"></script>
