--- a/webroot/index.html
+++ b/webroot/index.html
@@ -147,14 +147,14 @@
                     <ul>
                       <li data-l10n-id="talks-and-papers"><h4>Talks and Papers</h4></li>
                       <!--Test ryan summit-->
-                      <li >Ryan Singer giving a <a target="_blank" href="https://www.youtube.com/watch?v=P86QQXcnJ4M&feature=youtu.be">keynote</a> at StartEngine Summit 2.0 about rethinking the ICO.</li>
+                      <!--li >Ryan Singer giving a <a target="_blank" href="https://www.youtube.com/watch?v=P86QQXcnJ4M&feature=youtu.be">keynote</a> at StartEngine Summit 2.0 about rethinking the ICO.</li-->
                        <li >Bram Cohen giving a <a target="_blank" href="https://www.youtube.com/watch?v=2Zlcgt8FVz4">talk</a> at Stanford about stopping grinding attacks in Proofs of Space. </li>
                        <li data-l10n-id="bpase-2018-first">Bram Cohen giving a <a target="_blank" href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a target="_blank" href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space with <a href="https://view.publitas.com/chia-network/pbase18slides/" target="_blank">slides</a> by Hamza Abusalah. </li>
                         <!--li data-l10n-id="james-talk">James Prestwich giving a
                         <a target="_blank" href="https://www.youtube.com/watch?v=xe5d-Fn1yoo&feature=youtu.be">talk </a> at SF Cryptocurrency Devs Seminar about Chia Script and BLS Signatures with
                         <a target="_blank" href="https://view.publitas.com/chia-network/chia-script/">slides</a>.</li-->
                         <li data-l10n-id="bpase-2018-second">Ben Fisch giving a <a target="_blank" href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
-                      <li data-l10n-id="recent-talk">Bram Cohen's <a target="_blank" href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with <a target="_blank" href="https://view.publitas.com/chia-network/chia-1/">slides</a>.</li>
+                      <li data-l10n-id="recent-talk">Bram Cohen's <a target="_blank" href="https://www.facebook.com/BlockchainatBerkeley/videos/2006069823011271/">talk at Blockchain at Berkeley</a> (starts about 20:00) with <a target="_blank" href="https://view.publitas.com/chia-network/chia-1/">slides</a>.</li>
                       <li data-l10n-id="older-talk">Bram Cohen's
 
                         <!-- Updated for conflict "#115: #112 : Link to articles for news logo on homepage" -->
