--- a/webroot/index.html
+++ b/webroot/index.html
@@ -352,6 +352,11 @@
                         <img src="/images/github.svg" title="GitHub" >
                     </a>
                   </li>
+                  <li class="social_footer">
+                   <a href="https://medium.com/@chia_network" target="_blank">
+                       <img src="/images/medium.png" title="Medium" >
+                   </a>
+                 </li>
                 </ul>
             </div>
           </div>
