Fix Medium logo not appearing

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -354,7 +354,7 @@
                   </li>
                   <li class="social_footer">
                    <a href="https://medium.com/@chia_network" target="_blank">
-                       <img src="/images/medium.png" title="Medium" >
+                       <img src="/images/medium.svg" title="Medium" >
                    </a>
                  </li>
                 </ul>
