Add new address, and change github link

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -32,13 +32,13 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="//cdn.rawgit.com/showdownjs/showdown/1.6.4/dist/showdown.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    
+
     <meta name="defaultLanguage" content="en-US">
     <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr, pt-BR, tr">
     <link rel="localization" href="/locales/app.{locale}.ftl">
     <script src="/js/l20n.min.js"></script>
     <script defer="" src="/js/bootstrap.min.js"></script>
-    <script defer="" src="/js/locales.js?v=4"></script>    
+    <script defer="" src="/js/locales.js?v=4"></script>
     <script defer="" src="/js/locales.faq.js?v=7"></script>
   </head>
   <body class="layout" id="faq-page">
@@ -75,13 +75,13 @@
             </nav>
       </div>
 
-     
 
-      <!-- 
+
+      <!--
         NOTE - all of the innerHtml of this node will be replaced by the markdown version of the FAQ (locales.faq.js)
         The content below will never be shown unless there is an error or the client has javascript disabled
       -->
-      <div id="markdown-container" class="wrap container-fluid" >   
+      <div id="markdown-container" class="wrap container-fluid" >
         <div class="row">
             <div class="col">
               <h3 class="chiafaq">Frequently Asked Questions</h3>
@@ -200,7 +200,7 @@
             <div class="col">
                <p class="question">How is Chia resistant to miner centralization?</p>
                <p class="answer">Chia uses empty storage (like hard disk drives) to farm seeds. As there is so much empty storage space available and anyone with unused storage space will be able to farm, this should lead to farming decentralization. Bitcoin's proof of work mining system drives the formation of blocks toward a limited number of miners because aquiring specialized ASIC mining equipment and locating them near cheap electricity is beyond most people's ability to invest. Manufacturers of storage could optimize storage hardware to farm faster or cheaper, but the cost of doing so is probably not worth the reward and that would otherwise have the benefit of generally decreasing the cost of storage for everyone. Chia should become the most decentralized cryptocurrency on the market.</p>
-            </div> 
+            </div>
            <div class="w-100"></div>
             <div class="col">
                <p class="question">Will Chia be open source?</p>
@@ -215,8 +215,8 @@
             <div class="col">
                <p class="question">Where can I learn more?</p>
                <p class="answer">You can sign up for the announcements list to get info as it comes out. Also we're available to discuss announcements on Keybase. Check out our homepage for links.</p>
-            </div>             
-        </div>          
+            </div>
+        </div>
       </div>
 </div>
       <footer class="hero page-footer">
@@ -255,6 +255,9 @@
                   <li>
                     <p>1-844-257-8433</p>
                   </li>
+                  <li>
+                    <p>44 Montgomery Street, San Francisco, CA 94104</p>
+                  </li>
                 </ul>
             </div>
             <div class="col-sm-3">
@@ -273,7 +276,7 @@
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://github.com/Chia-Network/website" target="_blank">
+                    <a href="https://github.com/Chia-Network" target="_blank">
                         <img src="/images/github.svg" title="GitHub" >
                     </a>
                   </li>
