--- a/webroot/index.html
+++ b/webroot/index.html
@@ -330,6 +330,9 @@
                   <li>
                     <p>1-844-257-8433</p>
                   </li>
+                  <li>
+                    <p>44 Montgomery Street, San Francisco, CA 94104</p>
+                  </li>
                 </ul>
             </div>
             <div class="col-sm-3">
@@ -348,7 +351,7 @@
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://github.com/Chia-Network/website" target="_blank">
+                    <a href="https://github.com/Chia-Network" target="_blank">
                         <img src="/images/github.svg" title="GitHub" >
                     </a>
                   </li>
