Added VDF competition

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -129,6 +129,25 @@
         </div>
         </div>
 
+        <div class="wrap container-fluid" id="vdf">
+          <div class="row">
+            <div class="col-sm-5 centered">
+                <img src="../images/second_illo.svg">
+            </div>
+            <div class="col-sm-7">
+                 <img src="../images/icon_about.svg"><br /><br />
+                <h2>Want to win $100,000?</h2>
+                <p>To help improve our proof of time protocol, Chia is hosting a three-month, two-track competition to create implementations of our VDF algorithm. One contest track will set benchmarks for algorithm speed, and the other will tighten security.</p>
+
+<p>Individuals and teams will submit open-source code and a thorough readme file confidentially to Chia. Our developers will run the submitted code through our laboratory (you’ll have access to the technical specifications of the reference hardware) to select one track winner based on speed, and the other track winner based on security.</p>
+
+<p>Contestants will be able to communicate with us during the competition via a secure Keybase channel and <a href="https://www.reddit.com/r/chia_vdf/">Reddit</a>.</p>
+
+<p>Learn more about how to participate in our <a href="faq/index.html#vdf-faq">VDF Contest FAQ</a>.</p>
+            </div>
+          </div>
+        </div>
+
 
       <div class="wrap container-fluid" id="learn">
             <div class="row centered">
