--- a/webroot/index.html
+++ b/webroot/index.html
@@ -94,22 +94,6 @@
             </nav>
       </div>
 
-      <div class="container-fluid" id="main-hero">
-
-        <div class="container-fluid wrap" >
-
-        <div class="row">
-          <div class="col-sm-5">
-            <h1 data-l10n-id="slogan">Green money for a digital world</h1>
-            <p data-l10n-id="mission" class="margin-top"> We're building a blockchain based on proofs of space and time to make a cryptocurrency that is less wasteful, more decentralized, and more secure. </p>
-
-          </div>
-          <div class="col-sm-7">
-            <img src="../images/main_illo.svg" alt="chia image">
-          </div>
-          </div>
-        </div>
-      </div><!--/main-hero-->
 </div><!--/end of main wrapper-->
 <div class="page_wrapper">
 
@@ -120,13 +104,28 @@
             </div>
             <div class="col-sm-7">
                  <img src="../images/icon_about.svg"><br /><br />
-                <h2>Want to win $100,000 in total prize money?</h2>
+                <h2>Win $100,000 in total prize money</h2>
                 <p>To help improve our proof of time protocol with fast, open, and secure implementations, Chia is hosting a three-month, two-track competition for our <a href="https://eprint.iacr.org/2018/712.pdf">VDF algorithm</a>.</p>
 
       <p>Individuals and teams will submit open-source code and a thorough readme file confidentially to Chia. Our developers will run the submitted code through our laboratory (you’ll have access to the technical specifications of the reference hardware) to select one track winner based on speed, and the other track winner based on security. The code of the winners will be released.</p>
 
       <p>Contestants will be able to communicate with us during the competition via a secure Keybase channel and <a href="https://www.reddit.com/r/chia_vdf/">Reddit</a>. Details for the contest are <a href="https://github.com/Chia-Network/vdf-competition">posted on Github</a>.</p>
 
+            </div>
+          </div>
+        </div>
+        <br />
+
+        <div class="wrap container-fluid" id="green-money">
+          <div class="row">
+            <div class="col-sm-5">
+              <h1 data-l10n-id="slogan">Green money for a digital world</h1>
+              <p data-l10n-id="mission" class="margin-top"> We're building a blockchain based on proofs of space and time to make a cryptocurrency that is less wasteful, more decentralized, and more secure. </p>
+
+            </div>
+            <div class="col-sm-7">
+              <img src="../images/main_illo.svg" alt="chia image">
+            </div>
             </div>
           </div>
         </div>
